# email-triage-mcp

./: Cargo.toml  README.md
scripts/: codex-classify-email.sh
src/: main.rs
