[package]
name = "email-triage-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
imap = "2"
mailparse = "0.16"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
